--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -1,5 +1,6 @@
 @import "./foundation/settings";
 @import "~foundation-sites/scss/foundation";
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 @include foundation-everything;
 // place global css here
 *,
@@ -11,4 +12,74 @@
 :root {
   -moz-tab-size: 4;
   tab-size: 4;
+}
+
+body {
+  font-family: "Inter", "Arial", sans-serif;
+}
+
+.hero-h2 {
+  font-family: "Inter", "Arial", sans-serif;
+}
+
+.bottom-bar {
+  padding: .5rem;
+  background-color: #514bca65;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+.credits {
+  color: #514bca9c;
+  margin: 0;
+  padding: 0;
+  font-size: 10px;
+}
+
+.top-bar {
+  padding: 1rem;
+}
+
+.top-bar ul, a {
+  background-color: #fff;
+  color: #888888;
+  font-weight: 300;
+}
+
+.top-bar-left a:hover {
+  color: #514bca;
+}
+
+.top-bar {
+  background-color: #fff;
+}
+
+.button {
+  background-color: #514bca;
+  border-radius: 20px;
+}
+
+.button:hover {
+  background-color: #7e7acb;
+  color: #fff;
+}
+
+.hero-block {
+  background-color: #ffffffb2;
+  height: 500px;
+  width: 60%;
+  margin: 1rem auto 0 auto;
+  padding: 1.5rem;
+}
+
+.hero-left-block {
+  height: 450px;
+  padding: 1rem;
+  background-color: #514bca65;
+}
+
+.hero-right-block {
+  height: 450px;
+  background-color: #8b88c765;
 }
