--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -83,3 +83,47 @@ body {
   height: 450px;
   background-color: #8b88c765;
 }
+
+.register-form-error {
+  margin-top: -0.5rem;
+  margin-bottom: 1rem;
+  font-size: 0.75rem;
+  font-weight: bold;
+  color: #514bca;
+}
+
+.drag-and-drop {
+  display: flex;
+  align-items: center;
+  height: 50px;
+  background-color: #d9d9d9;
+  padding: 0.5rem;
+  border-radius: 20px;
+  margin-bottom: 0.7rem;
+}
+
+.drag-and-drop:hover {
+  cursor: pointer;
+}
+
+.drag-and-drop p {
+  margin: 0;
+  padding: 0
+}
+
+.form-round {
+  border-radius: 20px;
+  padding-left: 1rem;
+}
+
+.form-input-p {
+  padding-left: 1rem;
+  margin: 0;
+}
+
+.user-image {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
