--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -85,8 +85,7 @@ body {
 }
 
 .register-form-error {
-  margin-top: -0.5rem;
-  margin-bottom: 1rem;
+  margin: -0.5rem 1rem 0rem 1rem;
   font-size: 0.75rem;
   font-weight: bold;
   color: #514bca;
@@ -126,4 +125,17 @@ body {
   width: 40px;
   border-radius: 50%;
   margin-right: 1rem;
+}
+
+.errors {
+  list-style-type: none;
+  padding: 1rem;
+}
+
+.error-callout {
+  background-color: #514bca9c;
+  position: relative;
+  margin: 0 0 1rem 0;
+  padding: 0;
+  border-radius: 20px;
 }
