--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -210,7 +210,7 @@ body {
   color: #514bca;
 }
 
-.climb-show-block {
+.show-block {
   background-color: #ffffffb2;
   height: 500px;
   width: 90%;
@@ -218,19 +218,19 @@ body {
   padding: 1.5rem;
 }
 
-.climb-show-left {
+.show-left {
   height: 450px;
   padding: 1rem;
   background-color: #514bca65;
   overflow: auto;
 }
 
-.climb-show-middle {
+.show-middle {
   height: 450px;
   background-color: #514bca65;
 }
 
-.climb-show-right {
+.show-right {
   height: 450px;
   background-color: #514bca65;
 }
