--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -311,7 +311,7 @@ textarea {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #81d775;
+  color: #9d9c9c;
 }
 
 .area-climb-button {
