--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -545,3 +545,108 @@ no-format-link:focus {
   gap: 0.2rem;
   padding: 0.2rem;
 }
+
+.ticklist-update {
+  display: inline-block;
+  margin-left: 1rem;
+}
+
+.ticklist-icon {
+  margin-right: 0.7rem;
+}
+
+.ticklist-icon:hover {
+  cursor: pointer;
+}
+
+.tick-edit {
+  width: 50%;
+}
+
+.icon:hover {
+  cursor: pointer;
+}
+
+.relative {
+  position: relative;
+}
+
+.edit-image-icon {
+  position: absolute;
+  bottom: 0.5rem;
+  left: 0.5rem;
+  color: #fff;
+  font-size: 1.5em;
+}
+
+.edit-image-icon:hover {
+  cursor: pointer;
+}
+
+.modal-wrapper {
+  position: absolute;
+  bottom: 0;
+  background-color: #292929a8;
+  height: 100%;
+  width: 100%;
+}
+
+.modal-icon {
+  font-size: 2rem;
+  color: #fff;
+  padding: 1rem 0rem 0rem 1rem;
+}
+
+.modal-icon:hover {
+  cursor: pointer;
+}
+
+.image-modal-div {
+  padding: 1rem;
+}
+
+.image-preview {
+  object-fit: cover;
+  object-position: center;
+  height: 100%;
+  width: 100%;
+  clip-path: circle()
+}
+
+.new-image-wrapper {
+  display: flex;
+  justify-content: center;
+  height: 250px;
+}
+
+.save-icon {
+  position: absolute;
+  bottom: 2rem;
+  left: 1rem
+}
+
+.update-image-dnd {
+  margin: 0 auto;
+  background-color: #ffffff7a;
+  font-weight: 700;
+  text-align: center;
+  border-radius: 5px;
+  width: 30%;
+}
+
+.update-image-dnd:hover {
+  background-color: #21ff02a6;
+  cursor: pointer;
+}
+
+.image-errors {
+  text-align: center;
+  font-weight: 500;
+  color: #f64202;
+  background-color: #81d775;
+  border-radius: 10px;
+}
+
+.wait {
+  cursor: wait;
+}
