--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -686,3 +686,15 @@ no-format-link:focus {
   border-radius: 10px;
   background-color: #bcbcbc91;
 }
+
+@media screen and (max-width: 575px) {
+    .hero-left-block {
+      border-radius: 10px 10px 0px 0px;
+    }
+    .hero-right-block {
+      border-radius: 0px 0px 10px 10px;
+    }
+    .front-page-image {
+      border-radius: 0px 0px 10px 10px;
+    }
+}
