--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -117,6 +117,13 @@ a {
   border-radius: 0px 10px 0px 0px;
 }
 
+.hero-icon-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50%;
+}
+
 .register-form-error {
   margin: -0.5rem 1rem 0rem 1rem;
   font-size: 0.75rem;
